move map to top

--- a/index.html
+++ b/index.html
@@ -49,14 +49,16 @@
     </nav>
 
     <main role="main" class="container">
+      <div id="map"></div>
 
       <div class="starter-template">
         <h1>Welcome Back, Andrew!</h1>
+        <p>Here's the location of your bike.</p>
       </div>
 
     </main><!-- /.container -->
 
-    <div id="map"></div>
+    
 
     <!-- Google Maps API -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkFQubxuDEhTLNr4Psg5wYFUxNpawG2c&callback=initMap"></script>
