--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-      <a class="navbar-brand" href="#">Bike-Nocular</a>
+      <a class="navbar-brand" href="index.html">Bike-Nocular</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
