--- a/traffic.html
+++ b/traffic.html
@@ -16,7 +16,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-      <a class="navbar-brand" href="#">Bike-Nocular</a>
+      <a class="navbar-brand" href="index.html">Bike-Nocular</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,27 +32,16 @@
           <li class="nav-item">
             <a class="nav-link" href="manage.html">Manage Bike</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="javascript:void(0);" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Your Bike</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Bikael (Fixie)</a>
-              <a class="dropdown-item" href="#">Micycle (Mountain)</a>
-            </div>
-          </li>
         </ul>
-        <!-- <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
       </div>
     </nav>
 
-    <div id="map"></div>
+    <img src="images/livetraffic.jpg" alt="Traffic">
 
     <main role="main" class="container">
       <div class="starter-template">
-        <h1>Welcome Back, Andrew!</h1>
-        <p>Here's the location of your bike.</p>
+        <h1>Live Traffic!</h1>
+        <p>View live traffic above.</p>
       </div>
 
       <form id="choosebike">
