--- a/traffic.html
+++ b/traffic.html
@@ -36,31 +36,29 @@
       </div>
     </nav>
 
-    <img src="images/livetraffic.jpg" alt="Traffic">
-
     <main role="main" class="container">
+      <img src="images/livetraffic.jpg" alt="Traffic" class="center">
       <div class="starter-template">
         <h1>Live Traffic!</h1>
-        <p>View live traffic above.</p>
+        <p>View live traffic above, or get directions below.</p>
       </div>
 
-      <form id="choosebike">
+      <form id="bikenav">
         <div class="form-group">
-          <label for="searchclass">Select a bike:</label>
-          <select class="form-control" onchange="refreshmap()" id="bikelist" name="bikelist">
-            <option value="1">Bike Wazowski</option>
-            <option value="2">Micycle</option>
-          </select>
+          <label for="start">Start</label>
+          <input type="text" class="form-control" placeholder="Enter your current building name or address" id="start" name="start" value="Campbell Hall">
         </div>
+        <div class="form-group">
+          <label for="start">End</label>
+          <input type="text" class="form-control" placeholder="Enter your final destination's building name or address" id="end" name="end" value="Student Resource Building">
+        </div>
+        <button type="submit" value="submit" class="btn btn-default" id="submit">Map!</button>
       </form>
 
+      <div class="starter-template">
+        <h1>&nbsp</h1>
+      </div>
     </main><!-- /.container -->
-
-    
-
-    <!-- Google Maps API -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkFQubxuDEhTLNr4Psg5wYFUxNpawG2c&callback=initMap"></script>
-    <script src="index.js" type="text/javascript"></script>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
