--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
     </main><!-- /.container -->
 
-    
+    <!-- Custom Script -->
+    <script src="index.js" type="text/javascript"></script>
 
     <!-- Google Maps API -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkFQubxuDEhTLNr4Psg5wYFUxNpawG2c&callback=initMap"></script>
-    <script src="index.js" type="text/javascript"></script>
-
+    
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
